# advent_of_code

./: .gitignore  justfile
2024/: Cargo.toml  justfile
2024/.day_template/: Cargo.toml
2024/.day_template/src/: error.rs  part1.rs  part2.rs
